JumpScript/tests/baselines/reference/importDeclWithExportModifierAndExportAssignment.errors.txt
tests/cases/compiler/importDeclWithExportModifierAndExportAssignment.jump(5,19): error TS2708: Cannot use namespace 'x' as a value.
tests/cases/compiler/importDeclWithExportModifierAndExportAssignment.jump(5,21): error TS2694: Namespace 'x' has no exported member 'c'.
tests/cases/compiler/importDeclWithExportModifierAndExportAssignment.jump(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/importDeclWithExportModifierAndExportAssignment.jump (3 errors) ====
    module x {
        interface c {
        }
    }
    export import a = x.c;
                      ~
!!! error TS2708: Cannot use namespace 'x' as a value.
                        ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    export = x;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.